glue/codegen/src/snapshots/codegen__codegen_rust__tests__anonymous_struct.snap
---
source: codegen/src/codegen_rust.rs
expression: gen_rust(src)
---
#![allow(clippy::all, clippy::pedantic, clippy::nursery)]

use std::collections::HashMap;

#[derive(serde::Serialize, serde::Deserialize, Debug, Clone, Default)]
pub struct User {
    pub profile: UserProfile,
}

#[derive(serde::Serialize, serde::Deserialize, Debug, Clone, Default)]
pub struct UserProfile {
    pub bio: String,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub age: Option<i64>,
    pub settings: HashMap<String, UserProfileSettingsValue>,
}

#[derive(serde::Serialize, serde::Deserialize, Debug, Clone, Default)]
pub struct UserProfileSettingsValue {
    pub enabled: bool,
}
