glue/codegen/src/snapshots/codegen__codegen_rust__tests__record_array.snap
---
source: codegen/src/codegen_rust.rs
expression: output
---
#![allow(clippy::all, clippy::pedantic, clippy::nursery)]

use std::collections::HashMap;

#[derive(serde::Serialize, serde::Deserialize, Debug, Clone, Default)]
pub struct MultiConfig {
    /// List of config maps
    pub configs: Vec<HashMap<String, isize>>,
}
