glue/codegen/src/snapshots/codegen__codegen_rust__tests__record_nested_in_model.snap
---
source: codegen/src/codegen_rust.rs
expression: output
---
#![allow(clippy::all, clippy::pedantic, clippy::nursery)]

use std::collections::HashMap;

#[derive(serde::Serialize, serde::Deserialize, Debug, Clone, Default)]
pub struct Container {
    pub inner: ContainerInner,
}

#[derive(serde::Serialize, serde::Deserialize, Debug, Clone, Default)]
pub struct ContainerInner {
    /// Nested map field
    pub data: HashMap<String, serde_json::Value>,
}
