glue/codegen/src/snapshots/codegen__codegen_rust__tests__record_optional.snap
---
source: codegen/src/codegen_rust.rs
expression: output
---
#![allow(clippy::all, clippy::pedantic, clippy::nursery)]

use std::collections::HashMap;

#[derive(serde::Serialize, serde::Deserialize, Debug, Clone, Default)]
pub struct Config {
    /// Optional map of settings
    #[serde(skip_serializing_if = "Option::is_none")]
    pub settings: Option<HashMap<String, String>>,
}
