glue/codegen/src/snapshots/codegen__codegen_rust__tests__record_string_to_int.snap
---
source: codegen/src/codegen_rust.rs
expression: output
---
#![allow(clippy::all, clippy::pedantic, clippy::nursery)]

use std::collections::HashMap;

#[derive(serde::Serialize, serde::Deserialize, Debug, Clone, Default)]
pub struct Scores {
    /// Player scores by name
    pub scores: HashMap<String, isize>,
}
