glue/codegen/src/snapshots/codegen__codegen_rust__tests__test.snap
---
source: codegen/src/codegen_rust.rs
expression: gen_rust(src)
---
#![allow(clippy::all, clippy::pedantic, clippy::nursery)]

#[derive(serde::Serialize, serde::Deserialize, Debug, Clone, Default)]
pub struct GlueConfigSchema {
    /// Configuration for code generation (`glue gen [...]`)
    pub generation: GlueConfigSchemaGeneration,
}

#[derive(serde::Serialize, serde::Deserialize, Debug, Clone, Default)]
pub struct GlueConfigSchemaGenerationRustSerde {
    pub include_yaml: bool,
}

#[derive(serde::Serialize, serde::Deserialize, Debug, Clone, Default)]
pub struct GlueConfigSchemaGenerationPythonPydantic {
    /// The full import path for the base model class to inherit from (e.g., `pydantic.BaseModel` or `my.module.CustomBaseModel`)
    pub base_model: String,
}

/// Watermark modes for generated files
#[derive(serde::Serialize, serde::Deserialize, Debug, Clone, Copy, PartialEq, Eq, Hash)]
pub enum GlueConfigSchemaGenerationWatermark {
    /// Includes full watermark with generation command and timestamp
    #[serde(rename = "full")]
    Full,
    /// Includes short watermark with just generation command
    #[serde(rename = "short")]
    Short,
    /// No watermark included
    #[serde(rename = "none")]
    None,
}

#[derive(serde::Serialize, serde::Deserialize, Debug, Clone, Default)]
pub struct GlueConfigSchemaGeneration {
    /// Mode for the watermark at the top of the generated files
    pub watermark: GlueConfigSchemaGenerationWatermark,
    /// Configurations for Rust code generation using Serde (`glue gen rust-serde [...]`)
    pub rust_serde: GlueConfigSchemaGenerationRustSerde,
    /// Configurations for Python code generation using Pydantic (`glue gen py-pydantic [...]`)
    pub python_pydantic: GlueConfigSchemaGenerationPythonPydantic,
}
